--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ google-api-python-client==2.176.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
 google-generativeai==0.8.5
-Google Search_results==2.4.2
+google-search-results==2.4.2
 googleapis-common-protos==1.70.0
 grpcio==1.73.1
 grpcio-status==1.71.2
