--- a/requirements.txt
+++ b/requirements.txt
@@ -111,6 +111,7 @@ uritemplate==4.2.0
 urllib3==2.5.0
 watchdog==6.0.0
 websocket-client==1.8.0
+whitenoise==6.7.0
 wrapt==1.17.2
 wsproto==1.2.0
 dj-database-url==2.2.0
